Update composer structure with proper config for autoload-psr4

--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dice\\": "src/Dice"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Dice\\": "tests/Dice"
+            "Dice\\": ""
         }
     },
     "minimum-stability": "dev",
